package com.tjudream.designpattern.memento.innermemento;

/**
 * 描述:
 * <p>
 * Created by mengxiansen on 2018-12-01 11:09
 *
 * @author mengxs@lenovocloud.com
 */
public interface IMemento {
}
